--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "description": "",
   "dependencies": {
     "next": "^14.2.14",
+    "puppeteer": "^23.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
